src/corelib/tools/qmargins.h
@@ -4,6 +4,7 @@
 #ifndef QMARGINS_H
 #define QMARGINS_H
 
+#include <QtCore/qcheckedint_impl.h>
 #include <QtCore/qcompare.h>
 #include <QtCore/qnamespace.h>
 
@@ -50,11 +51,34 @@ public:
 
     [[nodiscard]] constexpr inline QMarginsF toMarginsF() const noexcept;
 
+    friend constexpr inline QMargins operator+(const QMargins &m1, const QMargins &m2) noexcept;
+    friend constexpr inline QMargins operator-(const QMargins &m1, const QMargins &m2) noexcept;
+    friend constexpr inline QMargins operator+(const QMargins &lhs, int rhs) noexcept;
+    friend constexpr inline QMargins operator+(int lhs, const QMargins &rhs) noexcept;
+    friend constexpr inline QMargins operator-(const QMargins &lhs, int rhs) noexcept;
+    friend constexpr inline QMargins operator*(const QMargins &margins, int factor) noexcept;
+    friend constexpr inline QMargins operator*(int factor, const QMargins &margins) noexcept;
+    friend constexpr inline QMargins operator*(const QMargins &margins, qreal factor) noexcept;
+    friend constexpr inline QMargins operator*(qreal factor, const QMargins &margins) noexcept;
+    friend constexpr inline QMargins operator/(const QMargins &margins, int divisor);
+    friend constexpr inline QMargins operator/(const QMargins &margins, qreal divisor);
+    friend constexpr inline QMargins operator|(const QMargins &m1, const QMargins &m2) noexcept;
+
 private:
-    int m_left;
-    int m_top;
-    int m_right;
-    int m_bottom;
+    using Representation = QtPrivate::QCheckedIntegers::QCheckedInt<int>;
+
+    constexpr QMargins(Representation left,
+                       Representation top,
+                       Representation right,
+                       Representation bottom) noexcept
+        : m_left(left), m_top(top), m_right(right), m_bottom(bottom)
+    {
+    }
+
+    Representation m_left;
+    Representation m_top;
+    Representation m_right;
+    Representation m_bottom;
 
     friend constexpr bool comparesEqual(const QMargins &lhs, const QMargins &rhs) noexcept
     {
@@ -72,13 +96,13 @@ private:
     friend constexpr decltype(auto) get(M &&m) noexcept
     {
         if constexpr (I == 0)
-            return q23::forward_like<M>(m.m_left);
+            return q23::forward_like<M>(m.m_left).as_underlying();
         else if constexpr (I == 1)
-            return q23::forward_like<M>(m.m_top);
+            return q23::forward_like<M>(m.m_top).as_underlying();
         else if constexpr (I == 2)
-            return q23::forward_like<M>(m.m_right);
+            return q23::forward_like<M>(m.m_right).as_underlying();
         else if constexpr (I == 3)
-            return q23::forward_like<M>(m.m_bottom);
+            return q23::forward_like<M>(m.m_bottom).as_underlying();
     }
 };
 
@@ -105,74 +129,75 @@ constexpr inline bool QMargins::isNull() const noexcept
 { return m_left==0 && m_top==0 && m_right==0 && m_bottom==0; }
 
 constexpr inline int QMargins::left() const noexcept
-{ return m_left; }
+{ return m_left.value(); }
 
 constexpr inline int QMargins::top() const noexcept
-{ return m_top; }
+{ return m_top.value(); }
 
 constexpr inline int QMargins::right() const noexcept
-{ return m_right; }
+{ return m_right.value(); }
 
 constexpr inline int QMargins::bottom() const noexcept
-{ return m_bottom; }
+{ return m_bottom.value(); }
 
 
 constexpr inline void QMargins::setLeft(int aleft) noexcept
-{ m_left = aleft; }
+{ m_left.setValue(aleft); }
 
 constexpr inline void QMargins::setTop(int atop) noexcept
-{ m_top = atop; }
+{ m_top.setValue(atop); }
 
 constexpr inline void QMargins::setRight(int aright) noexcept
-{ m_right = aright; }
+{ m_right.setValue(aright); }
 
 constexpr inline void QMargins::setBottom(int abottom) noexcept
-{ m_bottom = abottom; }
+{ m_bottom.setValue(abottom); }
 
 constexpr inline QMargins operator+(const QMargins &m1, const QMargins &m2) noexcept
 {
-    return QMargins(m1.left() + m2.left(), m1.top() + m2.top(),
-                    m1.right() + m2.right(), m1.bottom() + m2.bottom());
+    return QMargins(m1.m_left + m2.m_left, m1.m_top + m2.m_top,
+                    m1.m_right + m2.m_right, m1.m_bottom + m2.m_bottom);
 }
 
 constexpr inline QMargins operator-(const QMargins &m1, const QMargins &m2) noexcept
 {
-    return QMargins(m1.left() - m2.left(), m1.top() - m2.top(),
-                    m1.right() - m2.right(), m1.bottom() - m2.bottom());
+    return QMargins(m1.m_left - m2.m_left, m1.m_top - m2.m_top,
+                    m1.m_right - m2.m_right, m1.m_bottom - m2.m_bottom);
 }
 
 constexpr inline QMargins operator+(const QMargins &lhs, int rhs) noexcept
 {
-    return QMargins(lhs.left() + rhs, lhs.top() + rhs,
-                    lhs.right() + rhs, lhs.bottom() + rhs);
+    return QMargins(lhs.m_left + rhs, lhs.m_top + rhs,
+                    lhs.m_right + rhs, lhs.m_bottom + rhs);
 }
 
 constexpr inline QMargins operator+(int lhs, const QMargins &rhs) noexcept
 {
-    return QMargins(rhs.left() + lhs, rhs.top() + lhs,
-                    rhs.right() + lhs, rhs.bottom() + lhs);
+    return QMargins(rhs.m_left + lhs, rhs.m_top + lhs,
+                    rhs.m_right + lhs, rhs.m_bottom + lhs);
 }
 
 constexpr inline QMargins operator-(const QMargins &lhs, int rhs) noexcept
 {
-    return QMargins(lhs.left() - rhs, lhs.top() - rhs,
-                    lhs.right() - rhs, lhs.bottom() - rhs);
+    return QMargins(lhs.m_left - rhs, lhs.m_top - rhs,
+                    lhs.m_right - rhs, lhs.m_bottom - rhs);
 }
 
 constexpr inline QMargins operator*(const QMargins &margins, int factor) noexcept
 {
-    return QMargins(margins.left() * factor, margins.top() * factor,
-                    margins.right() * factor, margins.bottom() * factor);
+    return QMargins(margins.m_left * factor, margins.m_top * factor,
+                    margins.m_right * factor, margins.m_bottom * factor);
 }
 
 constexpr inline QMargins operator*(int factor, const QMargins &margins) noexcept
 {
-    return QMargins(margins.left() * factor, margins.top() * factor,
-                    margins.right() * factor, margins.bottom() * factor);
+    return QMargins(margins.m_left * factor, margins.m_top * factor,
+                    margins.m_right * factor, margins.m_bottom * factor);
 }
 
 constexpr inline QMargins operator*(const QMargins &margins, qreal factor) noexcept
 {
+    // Deliberately using left(), top() etc. (checked ints don't have FP arithmetic)
     return QMargins(qRound(margins.left() * factor), qRound(margins.top() * factor),
                     qRound(margins.right() * factor), qRound(margins.bottom() * factor));
 }
@@ -185,20 +210,21 @@ constexpr inline QMargins operator*(qreal factor, const QMargins &margins) noexc
 
 constexpr inline QMargins operator/(const QMargins &margins, int divisor)
 {
-    return QMargins(margins.left() / divisor, margins.top() / divisor,
-                    margins.right() / divisor, margins.bottom() / divisor);
+    return QMargins(margins.m_left / divisor, margins.m_top / divisor,
+                    margins.m_right / divisor, margins.m_bottom / divisor);
 }
 
 constexpr inline QMargins operator/(const QMargins &margins, qreal divisor)
 {
+    Q_ASSERT(!qFuzzyIsNull(divisor));
     return QMargins(qRound(margins.left() / divisor), qRound(margins.top() / divisor),
                     qRound(margins.right() / divisor), qRound(margins.bottom() / divisor));
 }
 
 constexpr inline QMargins operator|(const QMargins &m1, const QMargins &m2) noexcept
 {
-    return QMargins(qMax(m1.left(), m2.left()), qMax(m1.top(), m2.top()),
-                    qMax(m1.right(), m2.right()), qMax(m1.bottom(), m2.bottom()));
+    return QMargins(qMax(m1.m_left, m2.m_left), qMax(m1.m_top, m2.m_top),
+                    qMax(m1.m_right, m2.m_right), qMax(m1.m_bottom, m2.m_bottom));
 }
 
 constexpr inline QMargins &QMargins::operator+=(const QMargins &margins) noexcept
